# Dopamine

./: CMakeLists.txt
src/: CMakeLists.txt  accountmanager.cpp  accountmanager.h  main.cpp
src/qml/: main.qml
